# space_x_challenge

./: README.md  docker-compose.yml  pyproject.toml
Docker/development/: Dockerfile
Docker/development/env/: private  public
scripts/: start.sh
src/: main.py
src/connectors/: trello_connector.py
src/exceptions/: trello_connector.py  trello_service.py
src/routers/: trello.py
src/schemas/: tasks.py
src/services/: trello.py
tests/: conftest.py  test_task_router.py  test_task_schema.py  test_trello_connector.py  test_trello_service.py
tests/mocks/: mocked_response.py
