[tool.poetry]
name = "nanlabs"
version = "0.1.0"
description = "API that allows the user the tasks creation on Trello"
authors = ["Alejandro Brunacci <abrunacci87@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
